--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
     </div>
 
     <div id="body-3" class="light-bg" style="padding: 80px 0px ">
-      <div class="container-fluid">
+      <div class="container">
         <h2 style="font-weight: 600;">
           ZO-TA <span style="font-weight: 300;">BLOG</span>
         </h2>
