--- a/contact.html
+++ b/contact.html
@@ -233,8 +233,8 @@
       </div>
       <div class="form-wrapper container-fluid">
         <div class="row">
-          <div class="col-md-7 tabs-pill">
-            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+          <div class="col-md-7 col-xs-12 col-sm-12 tabs-pill">
+            <ul class="nav nav-pills nav-fill mb-3" id="pills-tab" role="tablist">
               <li class="nav-item">
                 <a
                   class="nav-link active"
@@ -614,6 +614,7 @@
         </div>
       </div>
     </div>
+ 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
