--- a/contact.html
+++ b/contact.html
@@ -234,7 +234,11 @@
       <div class="form-wrapper container-fluid">
         <div class="row">
           <div class="col-md-7 col-xs-12 col-sm-12 tabs-pill">
-            <ul class="nav nav-pills nav-fill mb-3" id="pills-tab" role="tablist">
+            <ul
+              class="nav nav-pills nav-fill mb-3"
+              id="pills-tab"
+              role="tablist"
+            >
               <li class="nav-item">
                 <a
                   class="nav-link active"
@@ -471,7 +475,16 @@
         </div>
       </div>
     </div>
-    <div class="divider-gray"></div>
+    <div class="container" style="max-width: 500px">
+      <div class="row">
+        <div class="col align-self-center">
+          <div
+            class="divider-gray"
+            style="border-bottom: solid 1px #d7d7d7 ;"
+          ></div>
+        </div>
+      </div>
+    </div>
     <div id="body-7" class="light-bg" style="padding: 80px 0px 80px 0px">
       <div class="container">
         <h2 class=" text-center border-center">
@@ -614,7 +627,7 @@
         </div>
       </div>
     </div>
- 
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
