--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                   <div class="image_with_text" style="margin-bottom: 129px">
                       <div class="image_with_text_container">
                         <img
-                          src="img/chat-active.png"
+                          src="img/group-3.png"
                           class="img-fluid"
                           alt="Responsive image"
                           style="float:left;margin-right: 19.6px;"
@@ -316,15 +316,15 @@
                     <div class="image_with_text" style="margin-bottom: 129px">
                       <div class="image_with_text_container">
                         <img
-                          src="img/chat-active.png"
+                          src="img/group-4.png"
                           class="img-fluid"
                           alt="Responsive image"
                           style="float:left;margin-right: 19.6px;"
                         />
-                        <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Nạp/Rút tiền</p>
+                        <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Chuyển tiền</p>
                       </div>
                       <p style="font-size: 14px;">
-                        Nạp rút tiền nhanh chóng, không mất phí
+                        Nhanh chóng sau vài cú chạm và thực hiện chỉ trong 2 giây. Không bó buộc trong giờ hành chính, giao dịch 24/7.
                       </p>
                     </div>
     
@@ -336,10 +336,10 @@
                           alt="Responsive image"
                           style="float:left;margin-right: 19.6px;"
                         />
-                        <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Nạp/Rút tiền</p>
+                        <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Chat</p>
                       </div>
                       <p style="font-size: 14px;">
-                        Nạp rút tiền nhanh chóng, không mất phí
+                        Chat trực tiếp với bạn bè mọi lúc mọi nơi
                       </p>
                     </div>
                 
@@ -379,45 +379,45 @@
                 <div class="image_with_text" style="margin-bottom: 129px">
                   <div class="image_with_text_container">
                     <img
-                      src="img/chat-active.png"
+                      src="img/topup-direct.png"
                       class="img-fluid"
                       alt="Responsive image"
                       style="float:left;margin-right: 19.6px;"
                     />
-                    <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Nạp/Rút tiền</p>
+                    <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Nạp tiền điện thoại</p>
                   </div>
                   <p style="font-size: 14px;">
-                    Nạp rút tiền nhanh chóng, không mất phí
+                    Hỗ trợ nhiều nhà mạng, chọn giá tiền tiện lợi, chiết khấu cạnh tranh. Tự động nhận biết số điện thoại người dùng.
                   </p>
                 </div>
 
                 <div class="image_with_text" style="margin-bottom: 129px">
                   <div class="image_with_text_container">
                     <img
-                      src="img/chat-active.png"
+                      src="img/topup-e-pin.png"
                       class="img-fluid"
                       alt="Responsive image"
                       style="float:left;margin-right: 19.6px;"
                     />
-                    <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Nạp/Rút tiền</p>
+                    <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Thẻ điện thoại/Game</p>
                   </div>
                   <p style="font-size: 14px;">
-                    Nạp rút tiền nhanh chóng, không mất phí
+                    Hỗ trợ nhiều nhà mạng, chọn giá tiền tiện lợi, chiết khấu cạnh tranh. Tự động nhận biết số điện thoại người dùng.
                   </p>
                 </div>
 
                 <div class="image_with_text" style="margin-bottom: 129px">
                   <div class="image_with_text_container">
                     <img
-                      src="img/chat-active.png"
+                      src="img/fill.png"
                       class="img-fluid"
                       alt="Responsive image"
                       style="float:left;margin-right: 19.6px;"
                     />
-                    <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Nạp/Rút tiền</p>
+                    <p style="font-weight:600; font-size: 17px; margin-bottom: 11.4px">Hỗ trợ</p>
                   </div>
                   <p style="font-size: 14px;">
-                    Nạp rút tiền nhanh chóng, không mất phí
+                    Hỗ trợ trực tiếp 24/7. Hệ thống câu hỏi giải đáp hầu hết mọi thắc mắc của khách hàng
                   </p>
                 </div>
 
